--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Shashank",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.33.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
