--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express-async-errors": "^3.1.1",
     "express-fileupload": "^1.4.0",
     "http-status-codes": "^2.2.0",
-    "mongoose": "^6.8.0"
+    "jest": "^29.3.1",
+    "mongoose": "^6.8.0",
+    "supertest": "^6.3.3"
   }
 }
