--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-fileupload": "^1.4.0",
     "http-status-codes": "^2.2.0",
     "jest": "^29.3.1",
+    "mongodb-memory-server": "^8.11.3",
     "mongoose": "^6.8.0",
     "supertest": "^6.3.3"
   }
