--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "^29.3.1",
     "mongodb-memory-server": "^8.11.3",
     "mongoose": "^6.8.0",
+    "redis": "^4.6.5",
     "supertest": "^6.3.3"
   }
 }
