--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-fileupload": "^1.4.0",
+    "express-rate-limit": "^6.7.0",
     "firebase-admin": "^11.5.0",
     "http-status-codes": "^2.2.0",
     "jest": "^29.3.1",
