--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
-version: '3.9'
+version: "3.9"
 services:
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - "8000:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - node-app
 
   node-app:
     build: .
@@ -12,8 +20,7 @@ services:
     volumes:
       - ./:/app
       - /app/node_modules
-    ports:
-      - "8000:8000"
+
     depends_on:
       - mongo
       - redis
