--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Shashank",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "cloudinary": "^1.33.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -21,6 +22,8 @@
     "jest": "^29.3.1",
     "mongodb-memory-server": "^8.11.3",
     "mongoose": "^6.8.0",
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.3",
     "redis": "^4.6.5",
     "supertest": "^6.3.3"
   }
